# OOP_3sem

./: README.md
1_PractOOP/: 4373_Шепелев_№1.docx  MakeFile_1  application.cpp  application.h  array.cpp  array.h  main.cpp  number.h
2_PractOOP/: Makefile
2_PractOOP/src/: application.cpp  application.h  array.cpp  array.h  complex.cpp  complex.h  main.cpp
3_PractOOP/: Makefile  output
3_PractOOP/src/: MakeFile_1  application.cpp  array.cpp  array.h  complex.cpp  complex.h  main.cpp  number.h  polynom.cpp  polynom.h
4_PractOOP/: CMakeLists.txt  application.cpp  application.h  array.cpp  complex.cpp  complex.h  interface.cpp  interface.h  interface.ui  main.cpp  polynom.h
5_PractOOP/Client/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui
5_PractOOP/Server/: CMakeLists.txt  array.cpp  array.h  complex.cpp  main.cpp  polynom.cpp  polynom.h  server.cpp  server.h  server.pro
6_PractOOP/Client/: app.cpp  app.h  app.ui  client.pro
6_PractOOP/Server/: array.h  complex.cpp  complex.h  number.h  polynom.cpp  polynom.h  server.cpp  server.h  server.pro
7_PractOOP/: CMakeLists.txt  array.h  complex.cpp  complex.h  cos.cpp  cos.h  function.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  polynom.cpp  polynom.h  si.h  sin.h
